:pencil2: | Correction de l'alignement du buton dans les annonces

--- a/src/Assets/css/templatemo-style.css
+++ b/src/Assets/css/templatemo-style.css
@@ -206,7 +206,7 @@ a:hover {
 
 .form-group1 {
     margin-bottom: 25px;
-    margin-left: 15%;
+    text-align: center;
 }
 
 .tm-btn-big {
